--- a/src/app/components/home/bio/bio.component.html
+++ b/src/app/components/home/bio/bio.component.html
@@ -1,1 +1,32 @@
-<p>bio works!</p>
+<div id="bio">
+    <div class="item">
+        <div class="body">
+            <div class="head">
+                <h1>Miracle Life Ministries</h1>
+            </div>
+            <div class="image">
+                <img src="../../../../assets/img/kids.png">
+            </div>
+        </div>
+    </div>
+    <div class="item reverse">
+        <div class="body">
+            <div class="head flex">
+                <h1>Activist For Peace</h1>
+            </div>
+            <div class="image">
+                <img src="../../../../assets/img/people.png">
+            </div>
+        </div>
+    </div>
+    <div class="item">
+        <div class="body">
+            <div class="head">
+                <h1>Leader Of People</h1>
+            </div>
+            <div class="image">
+                <img src="../../../../assets/img/street.png">
+            </div>
+        </div>
+    </div>
+</div>
