--- a/src/app/components/home/bio/bio.component.scss
+++ b/src/app/components/home/bio/bio.component.scss
@@ -1,7 +1,7 @@
 #bio {
     width: 100%;
     height: 100%;
-    border: solid;
+    border-top: solid;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
