--- a/src/app/components/home/bio/bio.component.scss
+++ b/src/app/components/home/bio/bio.component.scss
@@ -10,6 +10,14 @@
     z-index: 10;
 }
 
+.background {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    z-index: 2;
+}
 
 .reverse {
     .body {
@@ -49,16 +57,94 @@
 
         .image {
             width: 10rem;
-
-            img {
-                max-width: 100%;
-                max-height: 100%;
-            }
         }
 
         &:hover {
             padding-bottom: 75px;
             padding-top: 75px;
+        }
+    }
+}
+
+.ex {
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    overflow-x: hidden;
+    overflow-y: scroll;
+
+    scrollbar-width: thin;
+    scrollbar-color: rgba(214, 16, 2, 0.4) rgba(255, 255, 255, 0.6);
+    scrollbar-shadow-color: inset 0 0 6px rgba(0,0,0,0.3);
+    scroll-margin-block-start: 0;
+
+    div:first-of-type {
+        margin: 50px;
+    }
+
+    .image {
+        display: flex;
+        justify-content: center;
+        padding-top: 15px;
+    }
+
+    img {
+        max-width: 30%;
+    }
+
+    .back {
+        display: flex;
+        flex-direction: row-reverse;
+        cursor: pointer;
+    }
+
+    fa-icon {
+        padding-right: 15px;
+    }
+
+    h1 {
+        font-size: 3rem;
+    }
+}
+
+/* Let's get this party started */
+.ex::-webkit-scrollbar {
+    width: 15px;
+}
+ 
+/* Track */
+.ex::-webkit-scrollbar-track {
+    background-color: rgba(255, 255, 255, 0.6);
+    border-radius: 100px;
+}
+ 
+/* Handle */
+.ex::-webkit-scrollbar-thumb {
+    border-radius: 100px;
+    border: 6px solid rgba(0, 0, 0, 0.18);
+    border-left: 0;
+    border-right: 0;
+    background-color: rgba(214, 16, 2, 0.4);
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+@media screen and (max-width: 900px) {
+    .ex {
+        div:first-of-type {
+            margin: 30px;
+        }
+
+        .back {
+            margin-right: 0;
+        }
+
+        img {
+            max-width: 80%;
         }
     }
 }
