Added environment href variable

--- a/src/app/components/home/bio/bio.component.html
+++ b/src/app/components/home/bio/bio.component.html
@@ -6,7 +6,7 @@
                 <h1>Miracle Life Ministries</h1>
             </div>
             <div class="image">
-                <img src="../../../../assets/img/kids.png">
+                <img src="{{href}}/assets/img/kids.png">
             </div>
         </div>
     </div>
@@ -21,7 +21,7 @@
                 Ms. Ralanda created Miracle Life Ministries in 2015, giving people a free space to worship God and gain His wisdom one day at a time.
             </p>
             <div class="image">
-                <img src="../../../../assets/img/portrait1.png">
+                <img src="{{href}}/assets/img/portrait1.png">
             </div>
         </div>
     </div>
@@ -32,7 +32,7 @@
                 <h1>Activist For Peace</h1>
             </div>
             <div class="image">
-                <img src="../../../../assets/img/people.png">
+                <img src="{{href}}/assets/img/people.png">
             </div>
         </div>
     </div>
@@ -61,8 +61,8 @@
             </p>
             <div class="image">
                 <video [autoplay]="true" [muted]="true" [loop]="true" class="vid" [controls]="true">
-                    <source src="../../../../assets/vid/fox.webm" type="video/webm">
-                    <source src="../../../../assets/vid/fox.mp4" type="video/mp4">
+                    <source src="{{href}}/assets/vid/fox.webm" type="video/webm">
+                    <source src="{{href}}/assets/vid/fox.mp4" type="video/mp4">
                     Sorry, your browser doesn't support embedded videos.
                 </video>
             </div>
@@ -75,7 +75,7 @@
                 <h1>Leader Of People</h1>
             </div>
             <div class="image">
-                <img src="../../../../assets/img/street.png">
+                <img src="{{href}}/assets/img/street.png">
             </div>
         </div>
     </div>
@@ -99,7 +99,7 @@
                 parish from lack of knowledge. The power is ours.
             </p>
             <div class="image">
-                <img src="../../../../assets/img/portrait2.png">
+                <img src="{{href}}/assets/img/portrait2.png">
             </div>
         </div>
     </div>
