--- a/src/app/components/home/bio/bio.component.scss
+++ b/src/app/components/home/bio/bio.component.scss
@@ -88,6 +88,7 @@
         display: flex;
         justify-content: center;
         padding-top: 15px;
+        padding-bottom: 25px;
     }
 
     img {
