--- a/src/app/components/home/bio/bio.component.html
+++ b/src/app/components/home/bio/bio.component.html
@@ -52,11 +52,11 @@
                 out of the box and into the streets where the need is great and crucial. Simply put, we are living
                 in a time where fear and darkness threaten to swallow many people who feel lost, whole.
                 <br><br>
-                Since then, She has worked to advocate for mental health resources to be made available to
-                marginalized communities, coordinated with churches to provide trauma counseling resources
-                in June of 2020 and organized fund raisers to support the educational needs of families through
-                the COVID-19 pandemic. Tragically, because people continue to be struck down in before our
-                eyes she has rushed to the front lines to be a much needed resource for God’s light in spaces
+                Since then, she has worked to advocate for mental health resources to be made available to
+                marginalized communities, coordinated with churches to provide trauma counseling resources,
+                and organized fundraisers to support the educational needs of families through
+                the COVID-19 pandemic. Tragically, because people continue to be struck down before our
+                eyes, she has rushed to the front lines to be a much needed resource for God’s light in spaces
                 stricken by anger, grief and tragedy.
             </p>
             <div class="image">
